test/semantic_errors/func_redefinition.lat
// Test: Function redefinition
// Expected error: Redefinition of function 'foo'

munus foo() {
    reditus
}

munus foo() {
    reditus
}
